test/deriving/fail02.expected
File "fail02.ml", line 1, characters 25-33:
Error: Deriver foo is needed for bar, you need to add it before in the list
