test/deriving/fail02.ml
type t = int [@@deriving bar, foo]
